# agentmemorydb

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  agent_demo.py  alembic.ini  check_data.py  check_data2.py  docker-compose.yml  pyproject.toml  run_tests.py  seed_demo.py  simple_demo.py  test_graph.py  test_search.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agentmemodb/: __init__.py  client.py  embeddings.py  http_client.py  masking.py  memory_manager.py  store.py  types.py
agentmemodb/integrations/: __init__.py  langchain.py  langgraph.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_auth_webhooks_access.py  003_data_masking.py  004_hnsw_index.py
app/: __init__.py  cli.py  main.py
app/adapters/: __init__.py  langchain_history.py  langgraph_store.py
app/api/v1/: api_keys.py  artifacts.py  bulk.py  consolidation.py  events.py  graph.py  health.py  import_export.py  masking.py  mcp.py  memories.py  memory_links.py  observations.py  projects.py  retrieval_logs.py  router.py  runs.py  scheduler.py  tasks.py  users.py  webhooks.py
app/core/: __init__.py  auth.py  config.py  errors.py  metrics.py  middleware.py
app/db/: __init__.py  base.py  session.py
app/mcp/: __init__.py  server.py  tools.py  transport.py
app/models/: __init__.py  agent_run.py  api_key.py  artifact.py  enums.py  event.py  masking_log.py  memory.py  memory_access_log.py  memory_link.py  memory_version.py  observation.py  project.py  retrieval_log.py  task.py  task_state_transition.py  user.py  webhook.py
app/repositories/: __init__.py  artifact_repository.py  base.py  event_repository.py  memory_repository.py  observation_repository.py  project_repository.py  retrieval_log_repository.py  run_repository.py  task_repository.py  user_repository.py
app/schemas/: __init__.py  artifact.py  common.py  event.py  masking.py  memory.py  memory_link.py  observation.py  project.py  retrieval_log.py  run.py  task.py  user.py
app/sdk/: __init__.py  client.py
app/services/: __init__.py  access_tracking_service.py  consolidation_service.py  event_service.py  graph_service.py  import_export_service.py  masking_service.py  memory_service.py  observation_service.py  retrieval_log_service.py  retrieval_service.py  task_service.py  webhook_service.py
app/static/explorer/: index.html
app/static/explorer/assets/: index-BbSiozBK.css  index-DNn1xHBr.js
app/utils/: embedding_provider.py  extra_providers.py  hashing.py  masking.py  scoring.py
app/workers/: __init__.py  scheduler.py  stale_memory_archiver.py
app/ws/: __init__.py  routes.py
docker/: entrypoint.sh  init-db.sql
docs/: DETAILED_REFERENCE.md  README.md  USAGE_GUIDE.md  advanced-features.md  architecture.md  integrations.md  mcp-websocket.md  python-sdk.md  quickstart.md  rest-api.md
examples/scripts/: demo_event_to_memory.py  demo_langchain_langgraph.py  demo_memory_search.py  demo_pip_package.py  demo_task_flow.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: GraphVisualization.tsx  Layout.tsx  MemoryDetail.tsx  ScoreBar.tsx  StatCard.tsx
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
frontend/src/pages/: DashboardPage.tsx  EventsPage.tsx  ExplorerPage.tsx  GraphPage.tsx  SettingsPage.tsx
migrations/versions/: 004_add_rls.py
pkg/: README.md  publish.py  pyproject.toml
sdks/typescript/: README.md  package.json
sdks/typescript/src/: client.ts  index.ts  types.ts
tests/: conftest.py
tests/integration/: test_event_to_memory_flow.py  test_memory_search.py  test_retrieval_logging.py
tests/unit/: test_access_tracking.py  test_auth.py  test_bulk_api.py  test_consolidation.py  test_data_masking.py  test_extra_providers.py  test_graph_service.py  test_hnsw_streaming_langchain.py  test_import_export.py  test_memory_upsert.py  test_metrics.py  test_middleware.py  test_new_features.py  test_pip_package.py  test_scoring.py  test_sdk_client.py  test_state_transitions.py
